--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,31 @@
         }
     ],
     "require": {
-        "league/container": "~2.0",
-        "vlucas/spot2": "^2.1",
-        "php": ">=5.4"
+        "php": ">=5.4",
+        "league/container": "^2.2",
+        "psr/log": "^1.0",
+        "vlucas/spot2": "^2.2"
     },
     "require-dev": {
-    },
-    "suggest": {
+        "phpunit/phpunit" : "~4.0||~5.0",
+        "squizlabs/php_codesniffer": "^2.3"
     },
     "autoload": {
         "psr-4": {
             "Laasti\\SpotProvider\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Laasti\\SpotProvider\\": "tests/"
+        }
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "scripts": {
+        "test": "phpunit",
+        "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
+        "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests"
     }
 }
