--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,47 @@
 {
     "name": "laasti/spot-provider",
     "description": "A league/container service provider for Spot ORM.",
+    "type": "library",
     "license": "MIT",
     "authors": [
         {
             "name": "Sonia Marquette",
-            "email": "contact@nebulousweb.com"
+            "email": "contact@nebulousweb.com",
+            "homepage": "http://nebulousweb.com/",
+            "role": "Developer"
         }
     ],
+    "support": {
+        "issues": "https://github.com/laasti/spot-provider/issues",
+        "wiki": "https://github.com/laasti/spot-provider/wiki"
+    },
     "require": {
+        "php" : "~5.6|~7.0",
         "league/container": "~2.0",
-        "vlucas/spot2": "^2.1",
-        "php": ">=5.4"
+        "vlucas/spot2": "^2.1"
     },
     "require-dev": {
+        "phpunit/phpunit" : "~4.0||~5.0",
+        "squizlabs/php_codesniffer": "^2.3"
     },
     "suggest": {
     },
     "autoload": {
         "psr-4": {
             "Laasti\\SpotProvider\\": "src/"
+        }
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "scripts": {
+        "test": "phpunit",
+        "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
+        "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
         }
     }
 }
